src/components/Perks.css
.carousel {
  padding-top: 0;
}
.headline {
  padding: 120px 48px 0 48px;
}
.cols24 {
  width: 100%;
  float: left;
}
.cols3 {
  width: 30%;
  margin-right: 5%;
  float: left;
}
.cols3:last-child {
  margin-right: 0%;
}
h3 {
  font-size: 36px;
  line-height: 56px;
  letter-spacing: -2px;
  font-family: 'Barlow Semi Condensed', sans-serif;
  font-weight: 600;
}
p {
  font-size: 16px;
  line-height: 24px;
  font-family: 'Work Sans', sans-serif;
  font-weight: 400;
}
.img-card-img {
  margin-bottom: 24px;
}
.background {
  background: linear-gradient(
    white,
    white 30%,
    yellow 30%,
    yellow 50%,
    white 50%
  );
}

@media only screen and (max-width: 1100px) {
  .headline {
    padding: 100px 48px 0 48px;
  }
  .background {
    background: linear-gradient(
      white,
      white 30%,
      yellow 30%,
      yellow 50%,
      white 36%
    );
  }
}

@media only screen and (max-width: 900px) {
  .cols3 {
    width: 320px;
    margin-right: 24px;
  }
  .cols24 {
    overflow: hidden;
  }
  .headline {
    padding: 100px 24px 0 24px;
  }
  .carousel {
    padding: 0 0 80px 48px;
    width: 1500px;
    overflow-x: scroll;
  }
  .background {
    background: linear-gradient(
      white,
      white 30%,
      yellow 30%,
      yellow 50%,
      white 50%
    );
  }
}

